<resources>
    <string name="app_name">HugTai</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_bmi">BMIActivity</string>
    <string name="txt_BMI_1">น้ำหนักต่ำกว่าเกณฑ์</string>
    <string name="txt_BMI_2">สมส่วน</string>
    <string name="txt_BMI_3">น้ำหนักเกิน</string>
    <string name="txt_BMI_4">โรคอ้วน</string>
    <string name="txt_BMI_5">โรคอ้วนอันตราย</string>
    <string name="txt_detail_BMI_1">น้ำหนักน้อยกว่าปกติก็ไม่ค่อยดี หากคุณสูงมากแต่น้ำหนักน้อยเกินไป อาจเสี่ยงต่อการได้รับสารอาหารไม่เพียงพอหรือได้รับพลังงานไม่เพียงพอ ส่งผลให้ร่างกายอ่อนเพลียง่าย การรับประทานอาหารให้เพียงพอ และการออกกำลังกายเพื่อเสริมสร้างกล้ามเนื้อสามารถช่วยเพิ่มค่า BMI ให้อยู่ในเกณฑ์ปกติได้</string>
    <string name="txt_detail_BMI_2">น้ำหนักที่เหมาะสมสำหรับคนไทยคือค่า BMI ระหว่าง 18.5-22.9 จัดอยู่ในเกณฑ์ปกติ ห่างไกลโรคที่เกิดจากความอ้วน และมีความเสี่ยงต่อการเกิดโรคต่าง ๆ น้อยที่สุด ควรพยายามรักษาระดับค่า BMI ให้อยู่ในระดับนี้ให้นานที่สุด</string>
    <string name="txt_detail_BMI_3">พยายามอีกนิดเพื่อลดน้ำหนักให้เข้าสู่ค่ามาตรฐาน เพราะค่า BMI ในช่วงนี้ยังถือว่าเป็นกลุ่มผู้ที่มีความอ้วนอยู่บ้าง แม้จะไม่ถือว่าอ้วน แต่หากประวัติคนในครอบครัวเคยเป็นโรคเบาหวานและความดันโลหิตสูง ก็ถือว่ายังมีความเสี่ยงมากกว่าคนปกติ</string>
    <string name="txt_detail_BMI_4">คุณอ้วนในระดับหนึ่ง ถึงแม้จะไม่ถึงเกณฑ์ที่ถือว่าอ้วนมาก ๆ แต่ก็ยังมีความเสี่ยงต่อการเกิดโรคที่มากับความอ้วนได้เช่นกัน ทั้งโรคเบาหวาน และความดันโลหิตสูง</string>
    <string name="txt_detail_BMI_5">ค่อนข้างอันตราย เพราะเข้าเกณฑ์อ้วนมาก เสี่ยงต่อการเกิดโรคร้ายแรงที่แฝงมากับความอ้วน หากค่า BMI อยู่ในระดับนี้ จะต้องระวังการรับประทานไขมัน และควรออกกำลังกายอย่างสม่ำเสมอ และหากเลขยิ่งสูงกว่า 40.0 ยิ่งแสดงถึงความอ้วนที่มากขึ้น</string>
    <string name="txt_recommend_BMI_1">คุณต้อง รับประทานอาหารที่มีคุณภาพและมีปริมาณ เพียงพอ  ให้ครบ 5 หมู่ เน้นอาหารจำพวกเนื้อ นม ไข่ ผัก  ผลไม้  ออกกำลังกาย ( สัปดาห์ละ 3  ครั้งๆละ  30  นาที ) และ พักผ่อนให้เพียงพออย่าหักโหมงานมากเกินไป ถ้าไม่ดีขึ้นอาจมีปัญหาสุขภาพอื่นๆควรตรวจร่างกายให้ละเอียดเพื่อหาสาเหตุที่แท้จริงต่อไป</string>
    <string name="txt_recommend_BMI_2">คุณต้องพยายามดูแลสุขภาพและควบคุมน้ำหนักของคุณไว้ในระดับนี้ต่อไปเรื่อยๆ ด้วยการรับประทานอาหารที่มีประโยชน์  ออกกำลังกายสม่ำเสมอ และพักผ่อนให้เพียงพอ</string>
    <string name="txt_recommend_BMI_3">คุณต้องเริ่มควบคุมน้ำหนักด้วยการควบคุมอาหารประเภทแป้ง  น้ำตาล  ไขมัน   งดการกินจุบกินจิบ  กินอาหารดึกเกินไปและออกกำลังกายอย่างน้อยสัปดาห์ละ  3   ครั้งๆ ละไม่ต่ำกว่า 30 นาที</string>
    <string name="txt_recommend_BMI_4">คุณต้องควบคุมน้ำหนักด้วยการควบคุมอาหารตามหลัก ดังนี้   3  งด  คือ  งดขนมหวาน ของมันและแอลกอฮอล์ 3  ลด  คือ  ลดแป้ง น้ำตาลและเครื่องดื่มรสหวาน 3  เพิ่ม คือ เพิ่มผัก  ปลา ธัญพืช รวมทั้งงดการกินจุบกินจิบ  กินอาหารดึกเกินไปและออกกำลังกายอย่างน้อยสัปดาห์ละ  3   ครั้งๆ ละ    ไม่ต่ำกว่า  30  นาที</string>
    <string name="txt_recommend_BMI_5">คุณต้องลดน้ำหนักอย่งเร่งด่วนและจริงจัง  หัวใจสำคัญของการลดน้ำหนักอย่างถาวร  คือ    กินอาหารที่มีไขมันต่ำ  ออกกำลังกายสม่ำเสมอ  ลดปริมาณอาหารจำพวกแป้ง  น้ำตาล ไขมัน   เน้น  ปลา ผัก  และควรปรึกษาเจ้าหน้าที่สาธารณสุข เพื่อได้รับคำแนะนำที่ถูกต้อง  และตรวจสุขภาพเป็นประจำทุกปี</string>
    <string name="txt_recommend_pres_1">การควบคุมน้ำหนักตัวให้อยู่ในเกณฑ์ปกติหรือใกล้เคียงปกติ โดยให้มีค่าดัชนีมวลกาย ตั้งแต่ 18.5-22.9 กก./ม.2 และรอบเอว อยู่ในเกณฑ์มาตรฐาน สำหรับคนไทย คือ ผู้ชายน้อยกว่า 90 ซม. และผู้หญิงน้อยกว่า 80 ซม.งดสูบบุหรี่ หลีกเลี่ยงเครื่องดื่มแอลกอฮอล์ การออกกำลังอย่างน้อยวันละ 30 นาที สัปดาห์ละ 5วัน เพื่อสุขภาพที่ดี และที่สำคัญ ลดกินเค็ม ลดเกลือในอาหาร การบริโภคโซเดียม(เกลือ)ไม่เกิน 2,300 มก./วัน สามารถช่วยลดความดันโลหิตได้ทั้งในผู้ป่วยที่มี และไม่มีโรคความดันโลหิตสูง</string>
    <string name="txt_recommend_pres_2">ความดันโลหิตต่ำจะมีอาการเวียนศีรษะ มองเห็นไม่ชัด คลื่นไส้ สับสน ใจสั่น ผิวซีด ผิวหนังเย็นหรือชื้นผิดปกติ เสียการทรงตัว ร่างกายอ่อนแอ ชีพจรเต้นเร็ว เป็นลม หรืออาจเกิดอาการช็อกได้หากภาวะความดันต่ำมีความรุนแรงมาก เมื่อพบว่าตนเองมีอาการของภาวะความดันต่ำ ผู้ป่วยควรหยุดกิจกรรมทุกอย่างที่กำลังทำอยู่ ให้นั่งพักหรือนอนลง ดื่มน้ำหรือน้ำเกลือแร่ หากเวียนศีรษะให้นั่งลงแล้วก้มศีรษะไว้ระหว่างหัวเข่า เพื่อช่วยให้ความดันโลหิตกลับเป็นปกติ โดยอาการมักจะดีขึ้นภายในไม่กี่นาที</string>
    <string name="txt_recommend_sugar_1">การรักษาเบื้องต้น  ให้รับประทานคาร์โบไฮเดรตที่ดูดซึมเร็วเช่น ลูกอม 3 เม็ด,น้ำส้มคั้นหรือนำอัดลม 1 แก้ว,กล้วย 1 ผล, น้ำผึ้ง 3 ช้อนชา  ติดตามระดับโซเดียมทุก 15 นาที</string>
    <string name="txt_recommend_sugar_2">การรักษาน้ำตาลในเลือดสูงเบื้องต้น ตรวจระดับน้ำตาลในเลือดด้วยตัวเอง โดยตรวจจากเลือดที่ปลายนิ้วด้วยเครื่องวัดระดับน้ำตาล (ในกรณีที่มีเครื่องตรวจน้ำตาล) ดื่มน้ำสะอาดมาก ๆ หยุดทำกิจกรรมและให้นอนพัก  ถ้าอาการไมดีขึ้นและตรวจระดับน้ำตาลในเลือดหากสูงมากให้รีบมาพบแพทย์</string>
    <string name="txt_pres_1">ต่ำกว่าปกติ</string>
    <string name="txt_pres_2">ปกติ</string>
    <string name="txt_pres_3">สูงกว่าปกติ</string>
    <string name="txt_pres_4">อันตราย</string>
    <string name="txt_detail_pres_1"></string>
    <string name="txt_detail_pres_2">ปกติดีแล้ว รักษาระดับนี้ต่อไป</string>
    <string name="txt_detail_pres_3"></string>
    <string name="txt_detail_pres_4"></string>
    <string name="txt_sugar_1">น้ำตาลในเลือดต่ำกว่าปกติ</string>
    <string name="txt_sugar_2">น้ำตาลในเลือดอยู่ในเกณฑ์ปกติ</string>
    <string name="txt_sugar_3">น้ำตาลในเลือดสูงกว่าปกติ</string>
    <string name="txt_detail_sugar_1_1_1">น้ำตาลของคุณอยู่ในระดับต่ำกว่าปกติ สาเหตุอาจเกิดจากการอดอาหาร หรือรับประทานอาหารน้อยกว่าที่ควรได้รับในแต่ละวัน ออกกำลังกายมากเกินกว่าปกติ มากกว่า 2 ชั่วโมงขึ้นไป และไม่ได้ดื่มน้ำหรือจิบเกลือแร่ระหว่างออกกำลังกาย การสูบบุหรี่และดื่มเครื่องดื่มที่มีแอลกอฮอล์ จึงทำให้เกิดภาวะน้ำตาลในเลือดต่ำลง มักจะทำให้เกิดอาการ ตัวสั่น มือสั่น เวียนศีรษะ  เหงื่อออก หิว ตามัว หน้าซีด  เป็นลม หากปล่อยให้เกิดอาการนานเกินไปอาจทำให้เกิดอาการที่รุนแรง เช่น อาการชัก หมดสติ หรืออาจถึงขั้นเสียชีวิตได้</string>
    <string name="txt_detail_sugar_1_1_2"><u>คำแนะนำเมื่อพบอาการระดับน้ำตาลในเลือดต่ำ</u></string>
    <string name="txt_detail_sugar_1_1_3">» หากพบอาการน้ำตาลในเลือดต่ำให้รับประทานคาร์โบไฮเดรตที่ดูดซึมเร็ว เช่น ลูกอม 3 เม็ด น้ำส้มคั้นหรือนำอัดลม 1 แก้ว กล้วย 1 ผล น้ำผึ้ง 3 ช้อนชา</string>
    <string name="txt_detail_sugar_1_2_1">คุณควบคุมระดับน้ำตาลได้ดีแล้ว ให้คงพฤติกรรมนี้ไว้ ควบคุมอาหาร รับประทานอาหารในปริมาณที่พอเหมาะและมีประโยชน์ หมั่นออกกำลังกายสม่ำเสมอ พักผ่อนให้เพียงพอ ดื่มน้ำวันละ 6/-8 แก้วต่อวัน ทำจิตใจให้ปลอดโปร่ง</string>
    <string name="txt_detail_sugar_1_3_1">น้ำตาลในเลือดของคุณเกินแล้ว สาเหตุเกิดจากคุณไม่ได้ควบคุมอาหาร รับประทานอาหารที่มีน้ำตาลในปริมาณมาก และหากมีค่าระดับน้ำตาลในเลือด 100 -125  มิลลิกรัม/เดซิลิตร) จะเสี่ยงต่อการเป็นโรคเบาหวาน จะทำให้เกิดอาการกระหายน้ำมาก ปัสสาวะบ่อย  คลื่นไส้  อาเจียน หายใจเร็วและหอบลึก หายใจมีกลิ่นผลไม้เน่า อ่อนเพลีย ชีพจรเร็ว ความดันโลหิตต่ำ ผิวหนังแห้ง ปากแห้ง ซึม และอาจหมดสติได้</string>
    <string name="txt_detail_sugar_1_3_2">หากไม่ได้ควบคุม ปล่อยให้ระดับน้ำตาลในเลือดสูงกว่าปกติอย่างต่อเนื่อง และไม่ได้รับการตรวจจากแพทย์ เสี่ยงต่อโรคไตวายเรื้อรัง โรคหลอดเลือดสมอง โรคต้อหิน โรคต้อกระจก เท้าติดเชื้อหรือไร้ความรู้สึก บางรายอาจรุนแรงจนต้องตัดขาทิ้ง</string>
    <string name="txt_detail_sugar_1_3_3">คำแนะนำเมื่อระดับน้ำตาลในเลือดสูง</string>
    <string name="txt_detail_sugar_1_3_4">» หลีกเลี่ยงอาหารที่มีน้ำตาลสูง เช่น ขนมหวาน ขนมไทย แกงกะทิ </string>
    <string name="txt_detail_sugar_1_3_5">» หลีกเลี่ยงอาหารที่มีไขมันสูง เช่น อาหารทอด อาหารมันจัด และผลไม้ที่มีน้ำตาลสูง</string>
    <string name="txt_detail_sugar_1_3_6">» หมั่นออกกำลังกายสม่ำเสมอ พักผ่อนให้เพียงพอ </string>
    <string name="txt_detail_sugar_1_3_7">» ดื่มน้ำวันละ 6/-8 แก้วต่อวัน ทำจิตใจให้ปลอดโปร่ง </string>
    <string name="txt_detail_sugar_1_3_8">» ดื่มน้ำสะอาดมาก ๆ  อย่างน้อย 1.5 ลิตร/วัน </string>
    <string name="txt_detail_sugar_1_3_9">» หากมีอาการวิงเวียนศีรษะ หน้ามืด มึนงงให้รีบมาพบแพทย์เพื่อทำการรักษา</string>
    <string name="txt_detail_sugar_2_1_1">น้ำตาลของคุณอยู่ในระดับต่ำกว่าปกติ สาเหตุมักเกิดจากการได้รับยารักษาโรคเบาหวานที่มากเกินไป ซื้ออาหารเสริม หรือสมุนไพรต่าง ๆ มาทานเองโดยไม่ปรึกษาแพทย์ รับประทานอาหารน้อยกว่าที่ควรได้รับในแต่ละวัน ออกกำลังกายมากเกินกว่าปกติ มากกว่า 2 ชั่วโมงขึ้นไป และไม่ได้ดื่มน้ำหรือจิบเกลือแร่ระหว่างออกกำลังกาย การสูบบุหรี่และดื่มเครื่องดื่มที่มีแอลกอฮอล์ จึงทำให้เกิดภาวะน้ำตาลในเลือดต่ำลง</string>
    <string name="txt_detail_sugar_2_1_2">จะพบอาการผิดปกติ ได้แก่ วิงเวียนศีรษะกระสับกระส่าย หิว กระหายบ่อย หัวใจเต้นเร็วกว่าปกติ  เหงื่อออกมากผิดปกติ  มือ แขน ขา สั่นโดยไม่รู้ตัว, สะลึมสะลือ, ความคิดสับสน, , ตาเห็นภาพเลือนลาง</string>
    <string name="txt_detail_sugar_2_1_3">คำแนะนำเมื่อพบอาการระดับน้ำตาลในเลือดต่ำ</string>
    <string name="txt_detail_sugar_2_1_4">» หากพบอาการน้ำตาลในเลือดต่ำให้รับประทานคาร์โบไฮเดรตที่ดูดซึมเร็ว เช่น ลูกอม 3 เม็ด น้ำส้มคั้นหรือนำอัดลม 1 แก้ว กล้วย 1 ผล น้ำผึ้ง 3 ช้อนชา</string>
    <string name="txt_detail_sugar_2_2_1">คุณควบคุมระดับน้ำตาลได้ดีแล้ว  ให้คงพฤติกรรมนี้ไว้ รับประทานอาหารให้ตรงเวลาในปริมาณที่พอเหมาะ หลีกเลี่ยงอาหารที่มีน้ำตาลสูง เช่น ขนมหวาน ขนมไทย แกงกะทิ หลีกเลี่ยงอาหารที่มีไขมันสูง เช่น อาหารทอด อาหารมันจัด เน้นทานผักและผลไม้มากกว่าเนื้อสัตว์ และไม่ทานผลไม้ที่มีน้ำตาลสูง  รับประทานยาตามแพทย์สั่ง ไม่ควรหยุดยาเอง หมั่นออกกำลังกายสม่ำเสมอ พักผ่อนให้เพียงพอ ดื่มน้ำวันละ 6/-8 แก้วต่อวัน ทำจิตใจให้ปลอดโปร่ง ควบคุมให้ระดับน้ำตาลในเลือดอยู่ในระดับปกติเสมอ</string>
    <string name="txt_detail_sugar_2_3_1">น้ำตาลในเลือดคุณเกินแล้ว สาเหตุเกิดจากรับประทานอาหารมากเกินไป  ลืมทานยาเบาหวาน หรือทานยาเบาหวานน้อยเกินไป ขาดการออกกำลังกาย ความเครียด ทำให้เกิดอาการ รู้สึกเหนื่อยล้า อยากอาหารเพิ่มขึ้น กระหายน้ำบ่อย ปัสสาวะบ่อย สายตาพร่ามัว ปวดมวนท้อง เป็นแผลเรื้อรังหายช้า มีอาการเมื่อยเนื้อเมื่อยตัว ปวดศีรษะ ลมหายใจรุนแรง</string>
    <string name="txt_detail_sugar_2_3_2">คำแนะนำเมื่อระดับน้ำตาลในเลือดสูง</string>
    <string name="txt_detail_sugar_2_3_3">» ปรับเปลี่ยนพฤติกรรม หลีกเลี่ยงอาหารที่มีน้ำตาลสูง เช่น ขนมหวาน ขนมไทย แกงกะทิ</string>
    <string name="txt_detail_sugar_2_3_4">» หลีกเลี่ยงอาหารที่มีไขมันสูง เช่น อาหารทอด อาหารมันจัด และผลไม้ที่มีน้ำตาลสูง</string>
    <string name="txt_detail_sugar_2_3_5">» รับประทานยาตามแพทย์สั่ง </string>
    <string name="txt_detail_sugar_2_3_6">» หมั่นออกกำลังกายสม่ำเสมอ พักผ่อนให้เพียงพอ</string>
    <string name="txt_detail_sugar_2_3_7">» ดื่มน้ำวันละ 6/-8 แก้วต่อวัน ทำจิตใจให้ปลอดโปร่ง </string>
    <string name="txt_detail_sugar_2_3_8">» ดื่มน้ำสะอาดมาก ๆ  อย่างน้อย 1.5 ลิตร/วัน </string>
    <string name="txt_detail_sugar_2_3_9">» หากมีอาการวิงเวียนศีรษะ หน้ามืด มึนงงให้รีบมาพบแพทย์เพื่อทำการรักษา</string>
    <string name="txt_tai_1">ไตวายระยะสุดท้าย</string>
    <string name="txt_tai_2">ไตเสื่อมเริ่มวาย</string>
    <string name="txt_tai_3">ไตเสื่อมปานกลาง</string>
    <string name="txt_tai_4">ไตเสื่อมเล็กน้อย</string>
    <string name="txt_tai_5">ไตเริ่มเสื่อม</string>
    <string name="txt_tai_6">ปกติ</string>
    <string name="txt_detail_tai_1">ระยะที่ 5 ไตวายระยะสุดท้าย เตรียมตัวฟอกไต หรือเปลี่ยนถ่ายไต</string>
    <string name="txt_detail_tai_2">บางรายจะรู้สึกเหนื่อยง่าย อ่อนเพลีย ตัวซีดมากขึ้น  ผิวแห้ง และขาบวม หากผู้ป่วยไตอักเสบ จะพบโปรตีนรั่วมากับปัสสาวะผู้ป่วย เริ่มมีภาวะเลือดเป็นกรด ไขมันในหลอดเลือดสูง อาจพบภาวะน้ำเกิน หัวใจวายและโพแทสเซียมสูงในเลือด</string>
    <string name="txt_detail_tai_3">10.ควรพักผ่อนให้เพียงพอ ไม่นอนดึก ทำจิตใจให้ปลอดโปร่ง ผ่อนคลาย อย่าปล่อยให้ตัวเองเครียด</string>
    <string name="txt_detail_tai_4">ผลตรวจเลือดโดยทั่วไปยังไม่แสดงความผิดปกติ ความดันโลหิตอาจสูงขึ้นเล็กน้อย เท้าและข้อเท้าเริ่มบวม ปัสสาวะขุ่น มีกลิ่นเป็นฟอง ถ้าปรับเปลี่ยนวิถีชีวิตตั้งแต่ช่วงนี้สามารถกลับมาเป็นปกติได้โดยไม่รับการรักษา </string>
    <string name="txt_detail_tai_5">การทำงานของไตยังเป็นปกติ  การกรองของไตสามารถเพิ่มขึ้นได้มาเป็นปกติได้โดยไม่ต้องรับการรักษาหากคุณมีการปรับเปลี่ยนวิถีชีวิตตั้งแต่ตอนนี้</string>
    <string name="txt_detail_tai_6"></string>
    <string name="txt_recommend_tai_1">ควบคุมความดันโลหิตให้อยู่ที่ 1 30/80 มม.ปรอท ควบคุมระดับน้าตาลให้ต่ำกว่า 120 มก. ต่อเดซิลิตร และ HbA1c น้อยกว่า 6.5% ถ้ามีโรคเกาต์อย่าให้เกาต์กำเริบ หลีกเลี่ยงการใช้ยาแก้ปวดกระดูก ยาหม้อ และยาลูกกลอน</string>
</resources>